fixing path to for home assistant

--- a/packages/leapmmw_sensor.yml
+++ b/packages/leapmmw_sensor.yml
@@ -1,6 +1,6 @@
 substitutions:
   # include the header file with the UART parsing logic 
-  header_file: header/leapmmw_sensor.h
+  header_file: mmwave-d1mini/header/leapmmw_sensor.h
 
 esphome:
   name: ${device_name}
